# aiclaw

./: .gitignore  CHALLENGES.md  Cargo.toml  README.md  ROADMAP.md  config.example.toml
crates/aiclaw-types/: Cargo.toml
crates/aiclaw-types/src/: agent.rs  aiops.rs  channel.rs  kubernetes.rs  lib.rs  mcp.rs  memory.rs  skill.rs
docs/: HAMI_PENDING_RUNBOOK.md
docs/superpowers/plans/: 2026-04-12-feishu-interactive-implementation.md  2026-04-25-hermes-agent-memory-mode-plan.md
docs/superpowers/specs/: 2026-04-12-feishu-interactive-design.md  2026-04-25-hermes-agent-memory-mode-design.md
skills/inf-k8s-hami-gpu-pod/: SKILL.md
skills/k8s-health-check/: SKILL.md  SKILL.toml
skills/k8s-log-reader/: SKILL.md  SKILL.toml
skills/victoriametrics-logs/: SKILL.md  vl_query.py
skills/victoriametrics-metrics/: SKILL.md  vm_query.py
skills/vm-query/: SKILL.md  SKILL.toml
src/: lib.rs  main.rs
src/agent/: context.rs  intent.rs  mod.rs  orchestrator.rs  output_budget.rs  planner.rs  prompt_builder.rs  router.rs  session.rs  task.rs
src/agent/memory/: builtin.rs  byterover.rs  holographic.rs  mod.rs  tests.rs
src/aiops/: mod.rs  prometheus.rs  traits.rs  victoria.rs
src/channels/: feishu.rs  feishu_api.rs  feishu_card.rs  local.rs  mod.rs  streaming_buffer.rs  traits.rs  wecom.rs
src/config/: mod.rs  schema.rs
src/feedback/: mod.rs
src/kubernetes/: client.rs  kubeconfig.rs  kubectl.rs  mod.rs
src/llm/: bootstrap.rs  factory.rs  mod.rs  sse.rs  summarizer.rs  traits.rs  types.rs
src/llm/intent/: classifier.rs  mod.rs
src/llm/providers/: anthropic.rs  deepseek.rs  minimax.rs  mod.rs  openai.rs  qwen.rs  zhipu.rs
src/llm/routing/: direct.rs  mod.rs  ollama.rs  openrouter.rs
src/mcp/: client.rs  mod.rs  protocol.rs
src/observability/: log.rs  mod.rs  traits.rs
src/repl/: commands.rs  conversation.rs  input.rs  mod.rs  render.rs  session.rs  spinner.rs  tools.rs
src/security/: audit_logger.rs  command_validator.rs  mod.rs  rbac.rs  tenant.rs
src/session_store/: error.rs  mod.rs  schema.rs  tests.rs
src/skills/: exec_policy.rs  executor.rs  kubeconfig_hint.rs  loader.rs  mod.rs  registry.rs  skill_executor.rs  traits.rs
src/utils/: mod.rs  retry.rs  string.rs  time.rs
