[workspace]
resolver = "2"
members = [
    "crates/aiclaw-types",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["AIOps Team"]
rust-version = "1.87"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async traits
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Configuration schema
schemars = "0.8"

# HTTP server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# MCP protocol
jsonrpc-core = "18.0"
sse-client = "0.11"
tokio-io-util = "0.7"

# Utilities
futures = "0.3"
parking_lot = "0.12"
once_cell = "1.20"
dashmap = "5.5"
regex = "1.11"
dirs = "5.0"
serde_yaml = "0.9"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[package]
name = "aiclaw"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "aiclaw"
path = "src/lib.rs"

[[bin]]
name = "aiclaw"
path = "src/main.rs"

[dependencies]
aiclaw-types = { path = "crates/aiclaw-types" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
schemars = { workspace = true }
regex = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
serde_yaml = { workspace = true }
jsonrpc-core = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }

# REPL / interactive mode
clap = { version = "4", features = ["derive"] }
rustyline = "15"
crossterm = "0.28"
termimad = "0.30"
